[package]
name = "rjsonnet"
version = "0.4.6"
authors = ["messense <messense@icloud.com>"]
edition = "2018"
description = "Python bindings to Rust jrsonnet crate"
homepage = "https://github.com/messense/rjsonnet-py"
license = "MIT"
repository = "https://github.com/messense/rjsonnet-py.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rjsonnet"
crate-type = ["cdylib"]

[dependencies]
jrsonnet-evaluator = "0.4.2"
jrsonnet-gc = "0.4.2"
jrsonnet-parser = "0.4.2"
pyo3 = { version = "0.18.0", features = ["abi3-py37", "extension-module"] }

[patch.crates-io]
jrsonnet-evaluator = { git = "https://github.com/CertainLach/jrsonnet.git" }
jrsonnet-parser = { git = "https://github.com/CertainLach/jrsonnet.git" }
