[package]
name = "rjsonnet"
version = "0.5.1"
authors = ["messense <messense@icloud.com>"]
edition = "2021"
description = "Python bindings to Rust jrsonnet crate"
homepage = "https://github.com/messense/rjsonnet-py"
license = "MIT"
repository = "https://github.com/messense/rjsonnet-py.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rjsonnet"
crate-type = ["cdylib"]

[dependencies]
jrsonnet-evaluator = { git = "https://github.com/CertainLach/jrsonnet.git" }
jrsonnet-parser = { git = "https://github.com/CertainLach/jrsonnet.git" }
jrsonnet-stdlib = { git = "https://github.com/CertainLach/jrsonnet.git" }
jrsonnet-gcmodule = "0.3.5"
pyo3 = { version = "0.18.0", features = ["abi3-py37", "extension-module"] }
