[package]
name = "rjsonnet"
version = "0.5.3"
authors = ["messense <messense@icloud.com>"]
edition = "2021"
description = "Python bindings to Rust jrsonnet crate"
homepage = "https://github.com/messense/rjsonnet-py"
license = "MIT"
repository = "https://github.com/messense/rjsonnet-py.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rjsonnet"
crate-type = ["cdylib"]

[dependencies]
jrsonnet-evaluator = { version = "0.5.0-pre95", features = ["exp-preserve-order", "exp-destruct", "exp-object-iteration"] }
jrsonnet-parser = { version = "0.5.0-pre95" }
jrsonnet-stdlib = { version = "0.5.0-pre95", features = ["exp-preserve-order"] }
jrsonnet-gcmodule = "0.3.6"
pyo3 = { version = "0.21.1", features = ["abi3-py37", "extension-module"] }

[features]
default = []
nightly = ["jrsonnet-evaluator/nightly"]
